books/python-programming/src/examples/strings/string_change.out
abcd
Traceback (most recent call last):
  File "string_change.py", line 4, in <module>
    text[2] = 'Y'
TypeError: 'str' object does not support item assignment
