books/python-programming/src/examples/strings/string_change.py
text = "abcd"
print(text)     # abcd

text[2] = 'Y'

print("done")
print(text)
